--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,22 +1,35 @@
-.home-container{
+.container {
+    display: grid; 
+    grid-auto-flow: column; 
+    grid-auto-rows: 1fr; 
+    grid-template-columns: 2.2fr 9.8fr; 
+    gap: 0px 0px; 
+  }
+  .category { 
+    grid-area: 1 / 1 / 2 / 2;
     display: flex;
-    width: 100%;
-    height: 100%;
-    
-}
-
-.category{
-    
-    height: 100vh;
-    width: max-content;
+    align-items: center;
+    flex-direction: column;
     border-right: 1px solid transparent;
     border-image: linear-gradient( #DC4B9C,#4B6EB5);
     border-image-slice: 1;
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: scroll;}
+  .content { grid-area: 1 / 2 / 2 / 3; }
+
+
+/* .category{
+    
+    height: 100vh;
+        width: max-content;
+        border-right: 1px solid transparent;
+        border-image: linear-gradient( #DC4B9C,#4B6EB5);
+        border-image-slice: 1;
+        overflow: hidden;
+        overflow-y: scroll;
     
     
-}
+} */
 
 .category::-webkit-scrollbar{
     width: 4px;
@@ -29,7 +42,7 @@
 
 
 .category::-webkit-scrollbar-thumb:hover{
-    background:linear-gradient( #DC4B9C,#4B6EB5);
+    background:linear-gradient( #FC3CAC,#4B6EB5);
 }
 
 
@@ -38,48 +51,37 @@
     padding-left: 52px;
     padding-right: 10px;
     width: max-content;
+    padding-right: 2px;
 }
-.cat-list{
+/* .cat-list{
     width: 100%;
+} */
+.card-title{  
+    font-weight: bold;
 
 }
-.card-title{
-    width: 100%;
-}
 .cat-title:hover{
-    font-weight: bold;
-    color: #DC4B9C;
-    border-bottom: 2px solid #DC4B9C;
-    
-    
+    font-weight: 600;
+    color: #FC3CAC;
+    border-bottom: 1px solid #FC3CAC;
 }
 .content{
-    flex: 5;
-    display: flex;
+    /* flex: 5; */
+    /* display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100%; */
     overflow-y: scroll;
     
 }
 
 .navbar{
-    -webkit-box-shadow: 0px 9px 15px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 9px 15px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 9px 15px 2px rgba(0,0,0,0.75);
-    backdrop-filter: blur(8px);
+    /* backdrop-filter: blur(8px); */
     background: black;
     z-index: 1;
 }
 
-.logo{
-    background: linear-gradient(90deg, #DC4B9C,#4B6EB5);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-
 .card-title:hover{
-    color: #DC4B9C;
+    color: #FC3CAC;
     font-weight: 800;
 }
 
