--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,8 +1,15 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: black;
+}
+
 .container {
     display: grid; 
     grid-auto-flow: column; 
     grid-auto-rows: 1fr; 
-    grid-template-columns: 2.1fr 9.9fr; 
+    grid-template-columns: 0fr 9.9fr; 
     gap: 0px 0px; 
   }
   .category { 
@@ -11,8 +18,7 @@
     align-items: center;
     flex-direction: column;
     border-right: .5px solid #7773;
-    /* border-image: linear-gradient( #DC4B9C,#4B6EB5); */
-    /* border-image-slice: 1; */
+   
     overflow: hidden;
     overflow-y: scroll;
     
@@ -45,26 +51,27 @@
     width: max-content;
     padding-right: 2px;
 }
-/* .cat-list{
-    width: 100%;
-} */
-.card-title{  
-    font-weight: bold;
 
+.cardtitleActive{
+    color: #FC3CAC;
 }
-.cat-title:hover{
+.cardtitle{  
+    font-weight: bold;
+}
+.cattitle:hover{
     transition: .1s;
     font-weight: 600;
     color: #FC3CAC;
     border-bottom: 1.5px solid #FC3CAC;
 }
-.content{
+/* .content{
     overflow-y: scroll;
-}
+} */
 
 .navbar{
-    /* backdrop-filter: blur(8px); */
-    background: black;
+    
+    background:rgba(0,0,0,0.9);
+    backdrop-filter: blur(20px);
     z-index: 1;
 }
 
