--- a/src/Styles/Sidebar.css
+++ b/src/Styles/Sidebar.css
@@ -1,4 +1,5 @@
 
+/* 
 .category{
     
     height: 80vh;
@@ -29,4 +30,4 @@
     padding-left: 52px;
     padding-right: 10px;
     width: max-content;
-}
+} */
